# pulseq-validator

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  clippy.toml
.github/workflows/: ci.yml  release.yml
corpus/: README.md
corpus/data/: epi2d_1slice.params.json  epi2d_1slice.report.json  epi2d_1slice.seq  epi2d_1slice.testreport.txt  epi2d_3slice.params.json  epi2d_3slice.report.json  epi2d_3slice.seq  epi2d_3slice.testreport.txt  gre2d_1slice.params.json  gre2d_1slice.report.json  gre2d_1slice.seq  gre2d_1slice.testreport.txt  gre2d_3slice.params.json  gre2d_3slice.report.json  gre2d_3slice.seq  gre2d_3slice.testreport.txt  gre3d_8part.params.json  gre3d_8part.report.json  gre3d_8part.seq  gre3d_8part.testreport.txt  mgre2d_1slice.params.json  mgre2d_1slice.report.json  mgre2d_1slice.seq  mgre2d_1slice.testreport.txt  se2d_1slice.params.json  se2d_1slice.report.json  se2d_1slice.seq  se2d_1slice.testreport.txt  spgr2d_1slice.params.json  spgr2d_1slice.report.json  spgr2d_1slice.seq  spgr2d_1slice.testreport.txt
corpus/matlab/: fnint.m  generate_corpus.m
crates/pulseq-parse/: Cargo.toml  NOTICE  README.md
crates/pulseq-parse/src/: error.rs  lib.rs
crates/pulseq-parse/src/interp/: convert.rs  math.rs  mod.rs
crates/pulseq-parse/src/model/: extensions.rs  mod.rs
crates/pulseq-parse/src/model/convert/: definitions.rs  mod.rs  sections.rs  shape_lib.rs
crates/pulseq-parse/src/raw/: helpers.rs  mod.rs  parser.rs
crates/seq-validate/: Cargo.toml
crates/seq-validate-core/: Cargo.toml  build.rs
crates/seq-validate-core/profiles/: ge-premier.yaml  generic-3t.yaml
crates/seq-validate-core/schema/: report-v1.schema.json  spec-v1.schema.json
crates/seq-validate-core/src/: checks.rs  hardware.rs  integrity.rs  ir.rs  lib.rs  measurements.rs  metrics.rs  profile.rs  render.rs  report.rs  result.rs  spec.rs  trajectory.rs  waveform.rs
crates/seq-validate-core/tests/: catalog.rs  corpus_oracle.rs  hardware.rs  integrity.rs  measurements.rs  metrics.rs  parse_all_fixtures.rs  parse_example.rs  render.rs  report_schema.rs  result_model.rs  spec.rs  spec_schema.rs  trajectory.rs  vendor_ge.rs
crates/seq-validate/src/: main.rs
crates/seq-validate/tests/: cli.rs
docs/: 00-overview.md  01-vendor-parser.md  02-crate-skeleton.md  03-integrity-checks.md  04-derived-metrics.md  05-trajectory-geometry.md  06-scanner-hardware.md  07-spec-assert-mode.md  README.md
docs/tasks/: AF-1.md  AF-2.md  AF-3.md  AF-4.md  AF-5.md  AF-6.md  AF-7.md  README.md
fixtures/: epi_rs.seq  haste.seq  propeller-fse-axial.seq  t1_spgr_axial_brain.seq  t1_spgr_axial_brain.spec.yaml
