# Workspace root for the pulseq-validator.
#
#   crates/pulseq-parse       — our .seq parser, forked from pulseq-rs (MIT; see
#                               crates/pulseq-parse/NOTICE), now owned & developed here
#   crates/seq-validate-core  — engine library: the interpreted IR plus the
#                               result model, JSON report contract, and check abstraction
#   crates/seq-validate       — the `seq-validate` CLI, a thin shell over the engine
[workspace]
resolver = "3"
members = [
    "crates/pulseq-parse",
    "crates/seq-validate-core",
    "crates/seq-validate",
]

[workspace.package]
edition = "2024"
license = "MIT"

# Footgun lints, shared by every crate via `lints.workspace = true`. These were
# originally local to pulseq-parse (the fork); promoted here so the engine and
# CLI are held to the same bar. All "warn" — CI turns them into errors with
# `-D warnings` (see .github/workflows/ci.yml).
[workspace.lints.clippy]
unwrap_used      = "warn"
expect_used      = "warn"
panic            = "warn"
indexing_slicing = "warn"
# arithmetic_side_effects = "warn"
