[package]
name = "seq-validate-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Engine library for the Pulseq .seq validator: a stable interpreted IR over the pulseq-parse parser."

[dependencies]
pulseq-parse = { path = "../pulseq-parse" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Recomputes the [SIGNATURE] md5 for verification (integrity.signature check).
md5 = "0.7"

[dev-dependencies]
# Validates emitted reports against the published JSON Schema (schema/report-v1.schema.json).
# default-features off drops the HTTP/file `$ref` resolvers (and their reqwest/tokio
# stack): our schema is self-contained (local `$defs` only).
jsonschema = { version = "0.30", default-features = false }

[lints]
workspace = true
