[package]
name = "seq-validate-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Engine library for the Pulseq .seq validator: a stable interpreted IR over the pulseq-parse parser."

[dependencies]
pulseq-parse = { path = "../pulseq-parse" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Recomputes the [SIGNATURE] md5 for verification (integrity.signature check).
md5 = "0.7"
# Parses the optional expected-value spec (Step 7, `--spec`). The harness spec
# format is YAML; we read it leniently as a Value tree so comments, the literal
# `none` opt-out, and free-form guidance keys all load unmodified.
serde_yaml = "0.9"

[dev-dependencies]
# Validates emitted reports against the published JSON Schema (schema/report-v1.schema.json).
# default-features off drops the HTTP/file `$ref` resolvers (and their reqwest/tokio
# stack): our schema is self-contained (local `$defs` only).
jsonschema = { version = "0.30", default-features = false }
# Builds synthetic RF events (Shape<Complex64>) for the hardware-check tests;
# matches the parser's num-complex version.
num-complex = "0.4"

[lints]
workspace = true
